# AISE-Toolkit

./: .gitignore  LICENSE  README.md  TODO.md
Docs/: README.md
Examples/CPP/CPPBuilder/: CMakeLists.txt  TODO.md
Examples/CPP/CPPBuilder/Builder1/: CMakeLists.txt
Examples/CPP/CPPBuilder/Builder1/examples/: example_sample2.cpp
Examples/CPP/CPPBuilder/Builder1/include/: sample1.hpp
Examples/CPP/CPPBuilder/Builder1/tests/: sample1_tests.cpp  sample2_tests.cpp
Examples/CPP/CPPBuilder/Builder2/examples/: example_sample3.cpp  example_sample4.cpp
Examples/CPP/CPPBuilder/Builder2/tests/: sample3_tests.cpp  sample4_tests.cpp
Examples/CPP/DLStreamer_SocialDistancing/: README.md  main.cpp
Examples/Python/FaceRecognition/: README.md
Notebooks/: README.md
Notebooks/MachineLearning/: KDD_sklearn_classfiers.ipynb
Notebooks/MachineLearning/HeartDiseasePrediction/: SIT720_A5_221218743.ipynb
Notebooks/MachineLearning/IRISExperiments/: IRIS_DataCorrelation.ipynb  IRIS_KNN.ipynb
PDFs/: README.md
PDFs/MSAI_Coursework/SIT718_DataAnalytics/: README.md
PDFs/MSAI_Coursework/SIT731_DataWrangling/: Assignment_1.ipynb  Assignment_2.ipynb  Assignment_3.ipynb  Assignment_4.ipynb  Assignment_5.ipynb  Assignment_7.ipynb  BTC-USD.csv  Learning Summary Report Template.docx  LearningSummaryReport.docx
PDFs/MSAI_Coursework/SIT731_DataWrangling/7C_Data/: weather.csv
PDFs/MSAI_Coursework/SIT731_DataWrangling/Resource_Data/: Table of Contents.html
PDFs/MSAI_Coursework/SIT731_DataWrangling/teaching-data-master/clustering/: wut_mk2.csv  wut_z3.csv
PDFs/MSAI_Coursework/SIT789_ComputerVision_SpeechProcessing/: SIT789_Assignment_4.3P - Group Task.ipynb  assignment_1_1.ipynb  assignment_1_2.ipynb  assignment_1_3.ipynb  assignment_2_1.ipynb  assignment_2_2.ipynb  assignment_2_2_practical.ipynb  assignment_2_3.ipynb  assignment_3_1.ipynb  assignment_3_2.ipynb  assignment_4_1.ipynb  assignment_4_3.ipynb  assignment_5_1.ipynb  assignment_5_2.ipynb  assignment_6_1.ipynb  assignment_7_1.ipynb  assignment_8_1.ipynb  assignment_8_2.ipynb  assignment_9_1.ipynb  assignment_9_2.ipynb
PDFs/MSAI_Coursework/SIT_720_MachineLearning/Assignment1/: A1_heart_disease_dataset.csv  SIT720_A1_221218743.ipynb  Untitled2.ipynb  age_group_stat.csv  clean_data.csv
PDFs/MSAI_Coursework/SIT_720_MachineLearning/Assignment2/: SIT720_A2_221218743.ipynb
PDFs/MSAI_Coursework/SIT_720_MachineLearning/Assignment3/: Customer relationship marketing (CRM).csv  SIT720_A4_221218743.docx
PDFs/MSAI_Coursework/SIT_720_MachineLearning/Assignment4/: SIT720_A4_221218743.ipynb
PDFs/MSAI_Coursework/SIT_720_MachineLearning/Assignment5/: SIT720_A5_221218743.docx
PDFs/MSAI_Coursework/SIT_788_Engineering_AI_Solutions/: Assignment5_1.ipynb  Assignment5_2.ipynb  Assignment5_2_2.ipynb  Assignment6_1.ipynb  SIT788_3_2.ipynb  SIT788_4_1.ipynb  best_model.pkl
PDFs/MSAI_Coursework/SIT_796_Reinforcement_Learning/: Assignment3_1D.ipynb
PDFs/MSAI_Coursework/SIT_799_HumanAlignedAI/1.3C - Classification using FFNN/: 1.3C - Classification using FFNN.ipynb
PDFs/MSAI_Coursework/SIT_799_HumanAlignedAI/3.2HD - Discrimination and Bias in NLP/: 3.2HD - Discrimination and Bias in NLP.ipynb  requirements.txt  w2v_utils.py
PDFs/MSAI_Coursework/SIT_799_HumanAlignedAI/4.2D - Adversarial Attacks on Computer Vision/: requirements.txt
PDFs/MSAI_Coursework/SIT_799_HumanAlignedAI/5.2D - DeepFakeComments-Generator/: 5.2D - DeepFakeComments Generator.ipynb  covid19_fake.txt  requirements.txt
PDFs/MSAI_Coursework/SIT_799_HumanAlignedAI/6.1HD - Explainable AI/: 6.1HD - Explainable AI.ipynb  requirements.txt  utils.py
Playground/CPP/CPPBuilder/: CMakeLists.txt  Makefile  README.md  TODO.md
Playground/CPP/CPPBuilder/Algorithms/: CMakeLists.txt
Playground/CPP/CPPBuilder/Algorithms/examples/: example_algorithms.cpp
Playground/CPP/CPPBuilder/Algorithms/include/: algorithms.hpp  base_object.hpp  data_structures.hpp  dfs.hpp  graph.hpp
Playground/CPP/CPPBuilder/Algorithms/src/: algorithms.cpp
Playground/CPP/CPPBuilder/Algorithms/tests/: algorithms_test.cpp  base_object_test.cpp  dfs_tests.cpp
Playground/CPP/CPPBuilder/BaseBuilders/: CMakeLists.txt
Playground/CPP/CPPBuilder/BaseBuilders/examples/: example_algorithms.cpp  example_base_object.cpp  example_graph.cpp  example_matrix.cpp
Playground/CPP/CPPBuilder/BaseBuilders/include/: algorithms.hpp  data_structures.hpp  graph.hpp  matrix.hpp
Playground/CPP/CPPBuilder/BaseBuilders/src/: algorithms.cpp  graph.cpp  matrix.cpp
Playground/CPP/CPPBuilder/BaseBuilders/tests/: algorithms_test.cpp  graph_test.cpp  matrix_test.cpp
Playground/CPP/CPPBuilder/Builder1/: CMakeLists.txt
Playground/CPP/CPPBuilder/Builder1/examples/: example_sample1.cpp
Playground/CPP/CPPBuilder/Builder1/include/: sample1.hpp  sample2.hpp
Playground/CPP/CPPBuilder/Builder1/src/: sample1.cpp  sample2.cpp
Playground/CPP/CPPBuilder/Builder1/tests/: sample1_tests.cpp  sample2_tests.cpp
Playground/CPP/CPPBuilder/Builder2/: CMakeLists.txt
Playground/CPP/CPPBuilder/Builder2/include/: sample3.hpp  sample4.hpp
Playground/CPP/CPPBuilder/Builder2/src/: sample3.cpp  sample4.cpp
Playground/CPP/CPPBuilder/Builder2/tests/: sample3_tests.cpp
Playground/CPP/CPPBuilder/cmake/: configuration.cmake  library.cmake
Playground/CPP/CPPBuilder/doc/: Doxyfile.in
Playground/CPP/CPPBuilder/scripts/: BuilderGenerator.sh
Playground/CPP/DLStreamer_SocialDistancing/: CMakeLists.txt  build.sh
Playground/Python/DeepLearning/: nn_from_scratch.py  number_matching.py
Playground/Python/FaceRecognition/: pseudoFaceRecognition.py
Playground/Toys/DLStreamer_SocialDistancing/data/: input.xml
Playground/Toys/DLStreamer_SocialDistancing/model/: person-vehicle-bike-detection-crossroad-0078.xml
Scripts/: README.md
Scripts/Bash/: install_cpp_dependencies.sh  install_dependencies.sh  install_intel_gpu_drivers.sh  install_opencl.sh  set_cuda.sh
Scripts/Python/: AzureFaceDetectApp.py  data_downloader_requirements.txt  download_data.py
Scripts/R/DataAnalytics/: ExploratoryDataAnalytics_1.R  ExploratoryDataAnalytics_2.R
